# watchthehours

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
app/: database.py  main.py  models.py
app/routers/: activities.py  projects.py
